--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,7 +57,8 @@ html {
   
   .main-nav-item {
     text-decoration: none;
-    margin-right: 0.5rem;
+    margin-right: 0.8rem;
+    margin-left: 0.4rem;
     font-size: 1.2em;
     display: flex;
   }
@@ -282,16 +283,21 @@ html {
     color: #fff;
   }
   
-.icon-sign {
-  padding-right: 0.5em;
-  font-size: 1.4em;
-}
+  .icon-sign {
+    padding-right: 0.5em;
+    font-size: 1.4em;
+  }
 
-.errorMessage {
-  color: red;
-  font-weight: 600;
-  font-size: 1em;
-}
+  .errorMessage {
+    color: red;
+    font-weight: 600;
+    font-size: 1em;
+  }
+
+  .logged-container {
+    display: flex;
+    align-items: baseline;
+  }
 
   @media (min-width: 720px) {
     .account {
