correct css header

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,6 +49,7 @@ html {
   .main-nav a {
     font-weight: bold;
     color: #2c3e50;
+    margin-left: -0rem;
   }
   
   .main-nav a.router-link-exact-active {
@@ -58,7 +59,7 @@ html {
   .main-nav-item {
     text-decoration: none;
     margin-right: 0.8rem;
-    margin-left: 0.4rem;
+    margin-left: 1rem;
     font-size: 1.2em;
     display: flex;
   }
@@ -68,18 +69,13 @@ html {
   }
   
   .main-nav-logo {
-    display: flex;
-    align-items: center;
+    height: 90px;
   }
   
-  .main-nav-logo-image {
-    max-width: 100%;
-    width: 200px;
-  }
   
   .hero {
     background-image: url('../assets/bank-tree.jpeg');
-    background-position: 0 -50px;
+    background-position: 0 -30px;
     background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
@@ -150,7 +146,7 @@ html {
   
   .feature-item {
     flex: 1;
-    padding: 2.5rem;
+    padding: 1.9rem;
   }
   
   .feature-item-title {
@@ -296,7 +292,8 @@ html {
 
   .logged-container {
     display: flex;
-    align-items: baseline;
+    align-items: center;
+    font-size: 1.4em;
   }
 
   @media (min-width: 720px) {
