--- a/src/css/main.css
+++ b/src/css/main.css
@@ -115,6 +115,67 @@ body {
   font-size: 0.9rem;
 }
 
+.modal--active .root{
+  -webkit-filter: blur(8px);
+          filter: blur(8px);
+  opacity: 1;
+}
+
+.modal-wrapper {
+  z-index: 2          ;
+  width: 100%;
+  margin: auto;
+  max-width: 500px;
+  position: fixed;
+  top: 100vh;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -webkit-filter: blur(15px);
+          filter: blur(15px);
+  opacity: .01;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: opacity 300ms ease 200ms, -webkit-transform 300ms ease 200ms, -webkit-filter 300ms ease 200ms;
+  transition: opacity 300ms ease 200ms, -webkit-transform 300ms ease 200ms, -webkit-filter 300ms ease 200ms;
+  transition: transform 300ms ease 200ms, filter 300ms ease 200ms, opacity 300ms ease 200ms;
+  transition: transform 300ms ease 200ms, filter 300ms ease 200ms, opacity 300ms ease 200ms, -webkit-transform 300ms ease 200ms, -webkit-filter 300ms ease 200ms;
+}
+.modal-wrapper.modal--active {
+  top: 300px;
+  -webkit-filter: blur(0);
+          filter: blur(0);
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.modal {
+  width: 80%;
+  position: relative;
+  background: #fff;
+  padding: 3em 1em 1em;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.4);
+  margin: 0 auto;
+}
+
+.modal-content p{
+  color: #333;
+}
+
+.modal-button {
+  background: #06935f;
+  color: #fff;
+  position: absolute;
+  top: 0.8em;
+  right: 0.8em;
+  border: none;
+  border-radius: 3px;
+  padding: 0.2em 0.2em -0em 0.2em;
+}
+
 @media (min-width: 920px) {
   .hero {
     height: 400px;
