--- a/src/css/main.css
+++ b/src/css/main.css
@@ -176,7 +176,44 @@ body {
   padding: 0.2em 0.2em -0em 0.2em;
 }
 
+#searchBar {
+  margin-bottom: 2em;
+  font-size: 1.2em;
+}
+
+.search-label {
+  padding-right: 0.7em;
+}
+
+.no-results-table {
+  margin-top: 6em;
+  padding: 2em;
+  background-color: #1995362e;
+  border-radius: 12px;
+  width: 50%;
+  margin: auto;
+  font-weight: 600;
+  font-size: 1.4em;
+}
+
+.homepage-link {
+  margin-top: 1em;
+  font-size: 1.2em;
+  text-decoration: none;
+  color: black;
+}
+
+.homepage-link:hover {
+  text-decoration: underline;
+}
+
+
 @media (min-width: 920px) {
+  #searchBar {
+    position: relative;
+    right: -15%;
+  }
+
   .hero {
     height: 400px;
     background-position: 0% 33%;
