--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,28 +25,6 @@ body {
   flex: 1;
 }
 
-.bg-dark {
-  background-color: #12002b;
-  padding-top: 2em;
-  padding-bottom: 2em;
-}
-
-.sr-only {
-  border: 0 !important;
-  clip: rect(1px, 1px, 1px, 1px) !important;
-  /* 1 */
-  -webkit-clip-path: inset(50%) !important;
-  clip-path: inset(50%) !important;
-  /* 2 */
-  height: 1px !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  padding: 0 !important;
-  position: absolute !important;
-  width: 1px !important;
-  white-space: nowrap !important;
-  /* 3 */
-}
 
 .link-container {
   margin-top: -1em;
@@ -67,9 +45,6 @@ body {
   margin-left: -0rem;
 }
 
-.main-nav a.router-link-exact-active {
-  color: #42b983;
-}
 
 .main-nav-item {
   text-decoration: none;
@@ -114,10 +89,6 @@ body {
   padding-bottom: 1em;
 }
 
-.hero-content .text {
-  margin-bottom: 0;
-  font-size: 0.9rem;
-}
 
 .modal--active .root{
   -webkit-filter: blur(8px);
@@ -145,6 +116,7 @@ body {
   transition: transform 300ms ease 200ms, filter 300ms ease 200ms, opacity 300ms ease 200ms;
   transition: transform 300ms ease 200ms, filter 300ms ease 200ms, opacity 300ms ease 200ms, -webkit-transform 300ms ease 200ms, -webkit-filter 300ms ease 200ms;
 }
+
 .modal-wrapper.modal--active {
   top: 300px;
   -webkit-filter: blur(0);
@@ -166,7 +138,8 @@ body {
 }
 
 .modal-content p{
-  color: #333;
+  color: rgb(0, 0, 0);
+  font-size: 1.2em;
 }
 
 .modal-button {
@@ -250,89 +223,6 @@ body {
   }
 }
 
-.features {
-  display: flex;
-  flex-direction: column;
-}
-
-@media (min-width: 920px) {
-  .features {
-    flex-direction: row;
-  }
-}
-
-.container {
-  margin-bottom: 1.4em;
-}
-
-
-.feature-icon {
-  width: 100px;
-  border: 10px solid #00bc77;
-  border-radius: 50%;
-  padding: 1rem;
-}
-
-.feature-item {
-  flex: 1;
-  padding: 1.9rem;
-}
-
-.feature-item-title {
-  color: #222;
-  font-size: 1.25rem;
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-}
-
-.sign-in-button {
-  display: block;
-  width: 100%;
-  padding: 8px;
-  font-size: 1.1rem;
-  font-weight: bold;
-  margin-top: 1rem;
-  border-color: #00bc77;
-  background-color: #00bc77;
-  color: #fff;
-}
-
-.sign-in-content {
-  box-sizing: border-box;
-  background-color: white;
-  width: 300px;
-  margin: 0 auto;
-  margin-top: 3rem;
-  padding: 2rem;
-}
-
-.sign-in-icon {
-  font-size: 5rem;
-}
-
-.input-remember {
-  display: flex;
-}
-
-.input-remember label {
-  margin-left: 0.25rem;
-}
-
-.input-wrapper {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  margin-bottom: 1rem;
-}
-
-.input-wrapper label {
-  font-weight: bold;
-}
-
-.input-wrapper input {
-  padding: 5px;
-  font-size: 1.2rem;
-}
 
 .footer {
   display: flex;
@@ -345,105 +235,6 @@ body {
 .footer-text {
   margin: 0;
   padding: 0;
-}
-
-.account {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid black;
-  background-color: #fff;
-  width: 80%;
-  margin: 0 auto;
-  flex-direction: column;
-  padding: 1.5rem;
-  box-sizing: border-box;
-  text-align: left;
-  margin-bottom: 2rem;
-}
-
-.account-amount {
-  margin: 0;
-  font-size: 2.5rem;
-  font-weight: bold;
-}
-
-.account-amount-description {
-  margin: 0;
-}
-
-.account-title {
-  margin: 0;
-  padding: 0;
-  font-size: 1rem;
-  font-weight: normal;
-}
-
-.account-content-wrapper {
-  width: 100%;
-  flex: 1;
-}
-
-.edit-button {
-  border-color: #00bc77;
-  background-color: #00bc77;
-  color: #fff;
-  font-weight: bold;
-  padding: 10px;
-}
-
-.header {
-  color: #fff;
-  margin-bottom: 2rem;
-}
-
-.transaction-button {
-  display: block;
-  width: 100%;
-  padding: 8px;
-  font-size: 1.1rem;
-  font-weight: bold;
-  margin-top: 1rem;
-  border-color: #00bc77;
-  background-color: #00bc77;
-  color: #fff;
-}
-
-.icon-sign {
-  padding-right: 0.5em;
-  font-size: 1.4em;
-}
-
-.errorMessage {
-  color: red;
-  font-weight: 600;
-  font-size: 1em;
-}
-
-.logged-container {
-  display: flex;
-  align-items: center;
-  font-size: 1em;
-}
-
-.close {
-  padding-left: 0.8em;
-  position: relative;
-  top: -0.8em;
-  right: -0.4em;
-}
-
-.change-zone {
-  margin: 0.5em;
-  padding: 0.4em;
-}
-
-.edit-container {
-  margin: 1em;
-}
-
-.change-lastname {
-  margin-right: 1em;
 }
 
 .errorpage {
@@ -562,26 +353,13 @@ label {
   font-weight: 600;
 }
 
+.logged-container {
+  display: flex;
+  align-items: center;
+  font-size: 1em;
+}
+
 @media (min-width: 720px) {
-  .account {
-    flex-direction: row;
-  }
-
-  .account-content-wrapper.cta {
-    flex: 0;
-  }
-
-  .transaction-button {
-    width: 200px;
-  }
-
-  .logged-container {
-    display: flex;
-    align-items: center;
-    font-size: 1.4em;
-  }
-
-
   .main-nav-logo {
     height: 90px;
   }
@@ -590,6 +368,5 @@ label {
     display: flex;
     flex-direction: row;
   }
-
 
 }
