--- a/src/css/main.css
+++ b/src/css/main.css
@@ -59,7 +59,7 @@ body {
 }
 
 .main-nav-logo {
-  height: 70px;
+  display: none;
 }
 
 
@@ -129,7 +129,7 @@ body {
 .modal {
   width: 80%;
   position: relative;
-  background: #fff;
+  background: #b3b3b3f8;
   padding: 3em 1em 1em;
   overflow: hidden;
   border-radius: 10px;
@@ -361,7 +361,9 @@ label {
 
 @media (min-width: 720px) {
   .main-nav-logo {
+    display: block;
     height: 90px;
+    width: 90px;
   }
 
   .main-nav {
